<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_background"
    android:stretchColumns="*"
    android:id="@+id/game_history_table"
    tools:context=".GameHistoryFragment">

    <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/table_col_heading_vertical_padding"
            android:textAlignment="viewStart"
            tools:text="@string/winner_column_label" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/table_col_heading_vertical_padding"
            android:gravity="center_vertical"
            tools:text="@string/game_players_col_label" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/table_col_heading_vertical_padding"
            android:textAlignment="viewStart"
            tools:text="@string/game_date_col_label" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/table_col_heading_vertical_padding"
            android:textAlignment="viewEnd"
            tools:text="@string/game_duration_col_label" />

    </TableRow>


</TableLayout>